Composite JAR bootstrap support