@@ -2,18 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.smallrye.modules</groupId>
-    <artifactId>smallrye-modules</artifactId>
-    <version>1.0.beta2-SNAPSHOT</version>
-
     <parent>
         <groupId>io.smallrye</groupId>
         <artifactId>smallrye-parent</artifactId>
         <version>50</version>
     </parent>
 
-    <name>SmallRye Modules</name>
-    <description>A dynamic modular class loading environment</description>
+    <groupId>io.smallrye.modules</groupId>
+    <artifactId>smallrye-modules-parent</artifactId>
+    <version>1.0.beta2-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <name>SmallRye Modules - Parent</name>
+    <description>Parent and aggregator for SmallRye Modules</description>
+
+    <modules>
+        <module>runtime</module>
+        <module>boot</module>
+    </modules>
 
     <properties>
         <maven.compiler.release>17</maven.compiler.release>
@@ -32,54 +38,8 @@
         </dependencies>
     </dependencyManagement>
 
-    <dependencies>
-        <dependency>
-            <groupId>io.smallrye.common</groupId>
-            <artifactId>smallrye-common-cpu</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.smallrye.common</groupId>
-            <artifactId>smallrye-common-os</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.smallrye.common</groupId>
-            <artifactId>smallrye-common-resource</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.smallrye.classfile</groupId>
-            <artifactId>jdk-classfile-backport</artifactId>
-            <version>27</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.logging</groupId>
-            <artifactId>jboss-logging</artifactId>
-            <version>3.6.3.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
     <build>
         <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--add-exports java.base/jdk.internal.module=io.smallrye.modules</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>io.smallrye.modules.Launcher</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>net.revelc.code</groupId>
                 <artifactId>impsort-maven-plugin</artifactId>
@@ -118,12 +78,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <configuration>
-                    <source>17</source>
-                </configuration>
             </plugin>
         </plugins>
     </build>
